# monar

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  Makefile  README.md  make.cmd
.github/workflows/: ci.yml
bsp/: README.md
bsp/boards/: CMakeLists.txt
bsp/boards/host/reference/: CMakeLists.txt  README.md  board_init.c
bsp/boards/st/: CMakeLists.txt
bsp/boards/st/nucleo_f407zg/: CMakeLists.txt  README.md  board_init.c
bsp/boards/st/nucleo_f407zg/include/: board.h  board_config.h
bsp/boards/st/nucleo_f407zg/linker/: stm32f407zg_flash.ld
bsp/boards/st/nucleo_f407zg/startup/: startup_stm32f407xx.c
cmake/: monar_options.cmake
cmake/toolchains/: arm-none-eabi-gcc.cmake
docs/: architecture.md  build.md  phase3-foundation.md  runtime-silicon-bsp.md
examples/: CMakeLists.txt  README.md
examples/minimal/: CMakeLists.txt  main.c
include/monar/: config.h  device.h  errno.h  init.h  monar.h  osal.h  time.h  types.h
runtimes/: CMakeLists.txt  README.md
runtimes/baremetal/: CMakeLists.txt  README.md  mn_runtime_baremetal.c
silicon/: CMakeLists.txt  README.md
silicon/host/: CMakeLists.txt
silicon/st/stm32f4/: CMakeLists.txt  mn_silicon_stm32f4.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt  README.md  mn_init.c
src/device/: CMakeLists.txt  mn_device.c  mn_device_registry.c
src/internal/: mn_device_internal.h  mn_init_internal.h  mn_osal_backend.h  mn_osal_internal.h  mn_platform_hooks.h
src/osal/: CMakeLists.txt  mn_osal.c
tests/: CMakeLists.txt  README.md
tests/host/: CMakeLists.txt  test_device.c  test_host.h  test_lifecycle.c  test_main.c  test_osal.c
tools/: README.md
